HTML and CSS part 15

--- a/copyFocus/css/style.css
+++ b/copyFocus/css/style.css
@@ -1,872 +1,15 @@
-/*CSS Variables*/
-
-
-
-/*Font Import*/
-
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
-
-:root {
-
-	/* --variableName: property */
-	--primaryColor: #29ad7b;
-	--secondaryColor: #343a40;
-	--tertiaryColor: #ce4109;
-	--black: #000;
-	--boxColor: #2aaf80;
-	--footerColor: #2c2c2c;
-};
-
-
-
 * {
-	/* "*" means apply to everything  OR wildcard OR Default */
-
-	/* Set every element to have No Padding and no Margin */
-	/* Makes it easier to work with elements as we approach them*/
-	padding: 0;
 	margin: 0;
-
-	/* Smooth Scrolling */
-	scroll-behavior: smooth;
-
+	padding: 0;
 	box-sizing: border-box;
-
-
 }
 
 
-
-body {
-	background: #fff;
-	font-family: 'Raleway', sans-serif;
-	letter-spacing: 1px;
-
+.showcaseNavLogo {
+	width: 20%;
 }
-
-textarea {
-	font-family: inherit;
-	letter-spacing: inherit;
-}
-
-/* Utility Class */
-
-.container {
-	width: 60%;
-	margin: 0 auto;
-}
-
-/*Off Button for Float*/
-.clearFloat {
-	clear: both;
-}
-
-.button {
-	padding: 20px 40px;
-	font-size: 20px;
-	color: #fff;
-	border: none;
-	border-radius: 10px;
-}
-
-
-.greenSpan {
-	color: var(--primaryColor);
-}
-
-/*Nav Section*/
-.navLogo {
-	float: left;
-	margin: 20px 0;
-}
-
-.navLinks {
-	float: right;
-}
-
-.navLinks li {
-	float: left;
-
-	/*Top/bottom and left/right*/
-	margin: 30px 30px;
-
-	/* Remove Bullets next to list item */
-	list-style: none;
-
-
-	font-size: 20px;
-	text-transform: uppercase;
-
-}
-
-.navLinks a {
-	
-	/* Remove Underline from Links */
-	text-decoration: none;
-	color: #fff;
-}
-
-
-
-/*Showcase Section*/
 
 #showcase {
-	background: url('../images/banner.png') center/cover;
-	min-height: 900px;
-}
-
-/*If you're going to use Floats */
-/* Remember if you turn them on, Turn them Off*/
-
-.showcaseWoofer {
-	float:right;
-}
-
-.showcaseText {
-	float: left;
-	width: 50%;
-	margin-top: 250px;
-}
-
-.showcaseTitle {
-	font-size: 45px;
-}
-
-.showcasePara {
-	width: 60%;
-	line-height: 2;
-	margin: 20px 0 50px 0;
-}
-
-.showcaseGetStarted {
-	background: var(--primaryColor);
-	margin-right: 20px;
-}
-
-.showcaseContactUs {
-	background: var(--secondaryColor);
-}
-
-.showcaseForm {
-	margin-top: 50px;
-}
-
-.showcaseFormText {
-	width: 80%;
-	padding: 20px;
-	border-radius: 50px;
-}
-
-.showcaseFormSubmit{
-	border-top-right-radius: 50px;
-	border-bottom-right-radius: 50px;
-	padding: 20px;
-	background: var(--black);
-	color: #fff;
-	margin: -50px;
-}
-
-
-
-/*About*/
-
-#about {
-	margin-top: 100px;
-}
-
-.aboutIntro {
-	text-align: center;
-}
-
-.aboutTitle {
-	font-size: 50px;
-}
-
-.aboutPara {
-	font-size: 20px;
-	width: 75%;
-	margin: 0 auto;
-	line-height: 1.5;
-}
-
-
-
-/* Grid Example */
-
-/*.aboutCards {
-	display: grid;
-*/
-	/* Each fr gets divided into 12 sections*/
-	/*grid-template-columns: repeat(3, 1fr);*/
-/*	grid-template-columns: repeat(auto-fit, minmax(450px, 3fr));
-	text-align: center;
-	grid-gap: 50px;
-	margin: 50px 0;
-}*/
-/*
-.aboutCardInnerFirst {
-	background: var(--boxColor);
-	color: #fff;
-}
-
-.aboutCardInner {
-	border-radius: 30px;
-	padding: 100px 20px 100px 20px;
-}
-
-
-.aboutCardInner {
-	border: 1px solid grey;
-}
-
-.aboutCardTitle {
-	font-size: 40px;
-	font-weight: normal;
-}
-
-.aboutCardPara {
-	font-size: 20px;
-	width: 80%;
-	margin: 0 auto;
-}
-
-.aboutCardButton {
-	background: var(--black);
-	margin-top: 30px;
-}
-*/
-
-
-
-/* Flex Example */
-
-
-.aboutCards {
-	display: flex;
-	text-align: center;
-	margin: 50px 0 50px 0;
-
-}
-
-
-.aboutCardInnerFirst {
-	background: var(--boxColor);
-	color: #fff;
-}
-
-.aboutCardInner {
-	border-radius: 30px;
-	padding: 100px 20px 100px 20px;
-	margin: 0 20px;
-}
-
-
-.aboutCardInner {
-	border: 1px solid grey;
-}
-
-.aboutCardTitle {
-	font-size: 40px;
-	font-weight: normal;
-}
-
-.aboutCardPara {
-	font-size: 20px;
-	width: 80%;
-	margin: 0 auto;
-}
-
-.aboutCardButton {
-	background: var(--black);
-	margin-top: 30px;
-}
-
-
-
-/*About Offer*/
-
-.aboutOffer {
-	background: var(--primaryColor);
-}
-
-.aboutOfferBackground {
-	line-height: 0;
-}
-
-.aboutOfferBackground img {
-	width: 100%;
-}
-
-.aboutOfferContent {
-	display: flex;
-	justify-content: center;
-}
-
-.aboutOfferLeft img {
-	width: 650px;
-}
-
-.aboutOfferArrow {
-	width: 200px;
-	margin: 150px 0 0 -150px;
-}
-
-.aboutOfferRight {
-	width: 550px;
-	background: #fff;
-	padding: 0 50px 0 30px;
-}
-
-.aboutOfferRightTitle {
-	font-size: 50px;
-}
-
-.aboutOfferRightSubHeading {
-	font-size: 30px;
-	font-weight: normal;
-}
-
-.aboutOfferRightPara {
-	line-height: 1.5;
-
-}
-
-
-
-/* Services */
-
-#services {
-	margin: 100px auto;
-	text-align: center;
-}
-
-
-.servicesTitle {
-	font-size: 50px;
-}
-
-.servicesPara {
-	font-size: 20px;
-	width: 75%;
-	margin: 0 auto;
-	line-height: 1.5;
-}
-
-.servicesCards {
-	display: grid;
-	grid-gap: 30px;
-	grid-template-columns: 1fr 1fr 1fr;
-	margin: 50px 0;
-}
-
-.servicesCard {
-	border: 1px solid var(--primaryColor);
-	border-radius: 30px;
-	padding: 50px 30px;
-}
-
-.servicesCardSecond {
-	background: var(--boxColor);
-	border: 1px solid grey;
-
-}
-
-.servicesCardTitle {
-	font-weight: normal;
-	margin-top: 40px;
-}
-
-.servicesCardPara {
-	line-height: 1.5;
-	margin-top: 60px;
-}
-
-
-.servicesButton {
-	background: var(--black);
-}
-
-/*Contact*/
-
-/*'images/contact-bg.png'*/
-
-
-#contact {
-	margin-top: 100px;
-}
-
-.contactIntro {
-	text-align: center;
-}
-
-.contactTitle {
-	font-size: 50px;
-}
-
-.contactPara {
-	font-size: 20px;
-	width: 75%;
-	margin: 0 auto;
-	line-height: 1.5;
-}
-
-.contactForm {
-	background: url('../images/contact-bg.png');
+	background: url('../images/banner.png') no-repeat;
 	background-size: cover;
-	padding: 150px 0;
-	text-align: center;
 }
-
-
-.contactFormContent {
-	display: flex;
-	justify-content: center;
-	column-gap: 50px;
-
-
-}
-
-
-.contactFormInput {
-	width: 550px;
-	background: #fff;
-	padding: 30px 50px 0 30px;
-	background: #fff;
-	border-radius: 20px;
-
-	
-}
-
-.contactFormInput input {
-	width: 100%;
-	padding: 20px 0 20px 15px;
-	margin: 15px 0;
-
-	background: #eee;
-	border: none;
-	border-radius: 10px;
-	font-size: 20px;
-}
-
-.contactFormInput textarea {
-	width: 100%;
-	padding: 20px 0 20px 15px;
-	margin: 15px 0;
-
-	background: #eee;
-	border: none;
-	border-radius: 10px;
-	height: 100px;
-	font-size: 20px;
-}
-
-.contactFormButton {
-	background: var(--tertiaryColor);
-	margin-top: 30px;
-}
-
-.contactFormImage img {
-	width: 650px;
-}
-
-
-
-/* Footer */
-
-#footer {
-	background: var(--footerColor);
-	padding: 50px 0;
-}
-
-.footerContact {
-	display: flex;
-	background: #fff;
-	text-align: center;
-	width: 50%;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
-	border-radius: 50px;
-	column-gap: 100px;
-}
-
-.footerContactItem {
-	display: flex;
-	padding: 20px;
-	column-gap: 20px;
-	color: #aaa;
-}
-
-.footerContactItem img {
-	align-self: center;
-}
-
-
-.footerSiteNav {
-	display: grid;
-	grid-template-columns: 1fr 1fr 2fr;
-	text-align: center;
-	color: #fff;
-	padding-top: 50px;
-}
-
-.footerSiteNav img {
-	width: 50%;
-	margin-top: 100px;
-}
-
-.footerUseful, .footerProduct {
-	text-align: left;
-	font-size: 20px;
-	color: #fff;
-}
-
-.footerTitle {
-	text-transform: uppercase;
-	font-size: 25px;
-}
-
-
-.footerUseful li, .footerProduct li {
-	list-style-image: url('../images/bulit-icon.png');
-	margin-bottom: 10px;
-}
-
-.footerUsefulLinks a {
-	color: #fff;
-	text-decoration: none;
-}
-
-.footerProductLinks {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-}
-
-.footerFormInput {
-	width: 50%;
-	padding: 20px 20px 19px 20px;
-	border-radius: 50px;
-	font-size: 20px;
-}
-
-.footerFormSubscribe {
-	background: var(--primaryColor);
-	border-top-right-radius: 50px;
-	border-bottom-right-radius: 50px;
-	border-top-left-radius: 0px;
-	border-bottom-left-radius: 0px; 
-	margin-left: -50px;
-}
-
-.footerCopyright {
-	background: var(--primaryColor);
-	text-align: center;
-}
-
-.footerCopyright p{
-	margin: 0 auto;
-	padding: 30px;
-	color: #fff;
-	font-size: 20px;
-}
-
-
-@media (max-width: 768px){
-	
-	/*Utility Classes*/
-
-	.container {
-		width: 90%;
-		margin: 0 auto;
-	}
-
-	.button {
-		padding: 10px 20px;
-		font-size: 20px;
-		color: #fff;
-		border: none;
-		border-radius: 10px;
-	}
-
-	/*Nav Section*/
-	.navLogo {
-		float: left;
-		margin: 15px 0px 30px 0px;
-	}
-
-	.navLogo img {
-		width: 50%;
-	}
-
-	.navLinks li {
-		/*Top/bottom and left/right*/
-		margin: 10px 10px;
-		/* Remove Bullets next to list item */
-		font-size: 15px;
-		
-	}
-
-
-
-
-	/*Showcase Section*/
-
-	/*If you're going to use Floats */
-	/* Remember if you turn them on, Turn them Off*/
-
-	#showcase {
-		min-height: 300px;
-	}
-
-	.showcaseWoofer {
-		display: none;
-	}
-
-	.showcaseText {
-		display: inline;
-		width: 100%;
-		margin: 0px auto;
-	}
-
-	.showcasePara {
-		width: 100%;
-		line-height: 2;
-		margin: 20px 0 50px 0;
-		font-weight: bold;
-	}
-
-	/*About*/
-/*	#about {
-		margin-top: 100px;
-	}*/
-
-/*	.aboutIntro {
-		text-align: center;
-	}
-*/
-	.aboutTitle {
-		font-size: 40px;
-	}
-
-	.aboutPara {
-		font-size: 15px;
-	}
-
-	.aboutCards {
-		display: grid;
-		grid-template-columns: repeat(3, minmax(0, 3fr));
-	}
-	.aboutCardInner {
-		padding: 50px 20px 50px 20px;
-	}
-	.aboutCardTitle {
-		font-size: 25px;
-	}
-
-	.aboutCardPara {
-		font-size: 15px;
-	}
-
-	.aboutOfferContent {
-
-		/*Flex*/
-
-		flex-direction: column;
-		align-items: center;
-		text-align: center;
-
-		margin: 50px auto;
-
-
-
-		/*Grid*/
-
-		/*display: grid;
-		grid-template-columns: 1fr;
-		text-align: center;
-		margin-top: 50px;*/
-
-
-	}
-
-	.aboutOfferArrow {
-		display: none;
-	}
-
-	.aboutOfferLeft img {
-		width: 70%;
-	}
-
-	.aboutOfferRight {
-		padding: 0;
-		width: 70%;
-		text-align: left;
-		margin-top: 50px;
-	}
-
-	.aboutOfferRightTitle, .aboutOfferRightSubHeading, .aboutOfferRightPara {
-		margin-left: 30px;
-	}
-
-
-	/* Target different elements */
-
-	/*Target Odd Items*/
-/*	.servicesCard:nth-child(odd){
-		background-color: var(--tertiaryColor);
-	}
-
-	.servicesCard:nth-child(even){
-		background-color: var(--secondaryColor);
-	}*/
-
-	.servicesCards {
-		grid-template-columns: 1fr;
-		/*grid-template-columns: 2fr 1fr;*/
-
-		/*Flex*/
-/*		display: flex;
-		flex-wrap: wrap;
-*/	}
-
-/*	.servicesCard:nth-child(odd){
-		flex-basis: 45%;
-	}
-
-	.servicesCard:nth-child(even){
-		flex-basis: 25%;
-		flex-grow: 1;
-	}*/
-
-	.contactFormContent {
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-
-	.contactFormInput {
-		padding: 30px 0;
-		width: 500px;
-	}
-
-	.contactFormInput input, .contactFormInput textarea {
-		width: 85%;
-	}
-	.contactFormImage img {
-		width: 500px;
-		margin-top: 50px;
-	}
-
-	/* Footer Section */
-	.footerContact {
-		flex-direction: column;
-		align-items: flex-start;
-		padding: 15px;
-	}
-
-	.footerContactItem {
-		padding: 0px;
-		column-gap: 10px; 
-	}
-
-	.footerSiteNav {
-		grid-template-columns: 1fr;
-	}
-
-	.footerSiteNavLogo img {
-		margin-top: 0px;
-		width: 30%;
-	}
-
-	.footerProductLinks {
-		grid-template-columns: 1fr 1fr;
-	}
-
-	.footerFormSubscribe {
-		border-top-right-radius: 50px;
-		border-bottom-right-radius: 50px;
-		border-top-left-radius: 0px;
-		border-bottom-left-radius: 0px;
-	}
-
-	.footerFormInput {
-		padding: 10px 20px 9px 20px;
-	}
-}
-
-
-@media (max-width: 420px){
-
-	.container {
-		width: 90%;
-	}
-
-
-	.navLogo {
-		float: left;
-		margin: 10px 0px 15px 0px;
-	}
-
-	.navLogo img {
-		width: 30px;
-	}
-
-	.navLinks li {
-		/*Top/bottom and left/right*/
-		margin: 5px 5px;
-		/* Remove Bullets next to list item */
-		font-size: 10px;
-		
-	}
-
-	.aboutCards {
-		grid-template-columns: 1fr;
-	}
-
-	.aboutCard {
-		margin-top: 30px;
-	}
-
-	.contactFormInput {
-		width: 350px;
-	}
-
-	.contactFormImage img{
-		width: 350px;
-	}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
