--- a/copyFocus/css/style.css
+++ b/copyFocus/css/style.css
@@ -35,3 +35,29 @@ body {
 .showcaseButtonContactUs {
 	background: #343a40;
 }
+
+
+.aboutCard {
+	border: 3px solid rgba(0,0,0, 0.2);
+	border-radius: 50px;
+	box-shadow: 0px 0px 20px #ccc;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
