--- a/copyFocus/css/style.css
+++ b/copyFocus/css/style.css
@@ -63,6 +63,22 @@ body {
 	background: #eee;
 }
 
+
+/*Footer*/
+.footerContacts {
+	border-radius: 50px;
+}
+
+.customLinks {
+	list-style-image: url('../images/bulit-icon.png');
+}
+
+.customLinks a{
+	text-decoration: none;
+	color: #fff;
+}
+
+
 @media (max-width: 992px) {
 	.aboutOfferImage, .contactImage {
 		width: 500px;
@@ -75,16 +91,19 @@ body {
 		margin-top: 30px;
 
 	}
-
 	.contactForm {
 		width: 500px;
 		margin-bottom: 30px;
 	}
+	
 }
 
 
-
-
+@media (max-width: 700px) {
+	.footerContacts {
+		padding-left: 20%;
+	}
+}
 
 
 
