--- a/django_first_project/firstproject/templates/base.html
+++ b/django_first_project/firstproject/templates/base.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!doctype html>
 <html>
     <head>
@@ -7,6 +10,10 @@
         <title>Django First Project</title>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
     </head>
     <body>
         
@@ -42,4 +49,5 @@
        </div>
         
     </body>
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </html>
