--- a/django_first_project/firstproject/templates/index.html
+++ b/django_first_project/firstproject/templates/index.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 
 <div class='jumbotron text-center'>
 	<h1>Print This</h1>
 </div>
 
+<div class="thisWasInsertedByJavaScript text-center"></div>
 
+
+<img src="{% static 'img/unsplash_image.jpeg' %}" alt="">
 
 {% endblock %}
 
