django part8 detailview

--- a/django/firstproject/firstapp/templates/firstapp/book_list.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_list.html
@@ -27,7 +27,7 @@
 	<tbody>
 		{% for book in book_list %}
 			<tr>
-				<td>{{book.title}}</td>
+				<td><a href="{% url 'firstapp:BookDetailView' pk=book.pk %}">{{book.title}}</a></td>
 				<td>{{book.author}}</td>
 				<td>{{book.published_date}}</td>
 				<td>{{book.number_of_copies}}</td>
