--- a/django/firstproject/firstapp/templates/firstapp/book_detail.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="my-5">
-	<h1>Book Detail View (Function Based View)</h1>
+	<h1>Book Detail View (Class Based View)</h1>
 </div>
 
 <table class="table table-dark table-striped text-white">
