django part 12 updateview

--- a/django/firstproject/firstapp/templates/firstapp/book_detail.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_detail.html
@@ -22,8 +22,9 @@
 	</tbody>
 </table>
 
-<a class='btn btn-info' href="{% url 'firstapp:BookUpdateView' book.pk %}">Update Class Based View</a><br>
+<a class='btn btn-info' href="{% url 'firstapp:BookUpdateView' pk=book.pk %}">Update Class Based View</a>
 
+<hr>
 <a href="{% url 'firstapp:BookListView' %}">Book List View (Class Based View)</a>
 
 {% endblock %}
