--- a/django/firstproject/firstapp/templates/firstapp/book_detail_view.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_detail_view.html
@@ -22,7 +22,9 @@
 	</tbody>
 </table>
 
-<a class='btn btn-info' href="{% url 'firstapp:book_update_view' book.pk %}">Update Function Based View</a><br>
+<a class='btn btn-info' href="{% url 'firstapp:book_update_view' pk=book.pk %}">Update Function Based View</a>
+
+<hr>
 
 <a href="{% url 'firstapp:book_list_view' %}">Book List View (Function Based View)</a>
 
