--- a/django/firstproject/firstapp/templates/firstapp/book_update_view.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_update_view.html
@@ -10,7 +10,7 @@
 	{% csrf_token %}
 	{{form.as_p}}
 
-	<input type="submit" value="submit">
+	<input type="submit" value="Update">
 </form>
 
 {% endblock %}
