--- a/django/firstproject/firstapp/templates/firstapp/book_detail_view.html
+++ b/django/firstproject/firstapp/templates/firstapp/book_detail_view.html
@@ -22,7 +22,8 @@
 	</tbody>
 </table>
 
-<a class='btn btn-info' href="{% url 'firstapp:book_update_view' pk=book.pk %}">Update Function Based View</a>
+<a class='btn btn-info me-3' href="{% url 'firstapp:book_update_view' pk=book.pk %}">Update Function Based View</a>
+<a class='btn btn-danger' href="{% url 'firstapp:book_delete_view' pk=book.pk %}">Delete Function Based View</a>
 
 <hr>
 
