django part21 js createview

--- a/django/firstproject/templates/single_page_app.html
+++ b/django/firstproject/templates/single_page_app.html
@@ -4,13 +4,48 @@
 
 <h1 class='my-5'>Single Page App</h1>
 
-<!-- <p>This is a test</p> -->
 
-<div class="insertJavaScriptHere">
-	
-	
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add a Book</button>
 
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="book_title" class="col-form-label">Title:</label>
+            <input type="text" class="form-control" id="book_title">
+          </div>
+          <div class="mb-3">
+            <label for="book_author" class="col-form-label">Author:</label>
+            <input type='text' class="form-control" id="book_author"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="book_published_date" class="col-form-label">Published:</label>
+            <input type="date" class="form-control" id="book_published_date">
+          </div>
+          <div class="mb-3">
+            <label for="book_number_of_copies" class="col-form-label">Number of Copies:</label>
+            <input type='number' class="form-control" id="book_number_of_copies"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary book_create_save">Send message</button>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+<div class="insertJavaScriptHere"></div>
 
 
 
