--- a/django/firstproject/templates/single_page_app.html
+++ b/django/firstproject/templates/single_page_app.html
@@ -90,6 +90,33 @@
 
 
 
+<!-- Modal for Delete -->
+<div class="modal fade" id="deleteBookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Book</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          
+          <div class="deleteError"></div>
+
+          <p>If you would like to delete the book, please type in the name of the book in the box below: <span class='nameOfBook text-danger fw-bold'></span></p>
+
+          <input type="text" class='form-control' id='nameOfBookToDelete'>
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger book_delete_save">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
 
