--- a/djangoBlog/blog/templates/base.html
+++ b/djangoBlog/blog/templates/base.html
@@ -15,7 +15,7 @@
         <!-- Nav Bar -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="#">Navbar</a>
+		    <a class="navbar-brand" href="#">{{user}}</a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
@@ -27,9 +27,26 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="{% url 'posts:post_list' %}">Posts</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="{% url 'posts:post_create' %}">Create a Post</a>
-		        </li>
+		        
+
+		        {% if user.is_authenticated %}
+		        	<li class="nav-item">
+			          <a class="nav-link" href="{% url 'posts:post_create' %}">Create a Post</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+			        </li>
+
+		        {% else %}
+
+		        	<li class="nav-item">
+			          <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
+			        </li>
+		        {% endif %}
+
 		        <!-- <li class="nav-item dropdown">
 		          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 		            Dropdown
